[package]
name = "bn"
version = "0.4.4"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/zcash/bn"
repository = "https://github.com/zcash/bn"
license = "MIT OR Apache-2.0"

[[bench]]
name = "api"

[dependencies]
rand = "0.4"
rustc-serialize = { git = "https://github.com/chrysn-pull-requests/rustc-serialize", branch = "for-wasm" }
byteorder = "1.0"

[patch.crates-io]
rand = { git = "https://github.com/rust-lang-nursery/rand", branch = "0.4.1" }
rustc-serialize = { git = "https://github.com/chrysn-pull-requests/rustc-serialize", branch = "for-wasm" }

[dev-dependencies.bincode]
version = "0.6"
default-features = false
features = ["rustc-serialize"]
